<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:gravity="center"
            android:text="@string/txt_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/activity_main_form_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/txt_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_main_til_rut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="8sp"
                android:hint="@string/txt_rut"
                android:hintTextColor="#616161"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_main_til_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="8sp"
                android:hint="@string/txt_first_name"
                android:hintTextColor="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_main_til_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="8sp"
                android:hint="@string/txt_last_name"
                android:hintTextColor="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_main_til_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:hint="@string/txt_gender"
                android:hintTextColor="#616161"
                tools:ignore="TextContrastCheck"
                tools:layout_marginBottom="8sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_main_til_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="8sp"
                android:hint="@string/txt_age"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_main_til_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="8sp"
                android:hint="@string/txt_date_of_birth"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_main_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/txt_btn_confirm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>